fixed submit empty data bug, still no attachment